# artflow

./: .gitignore  .gitlint  .pre-commit-config.yaml  COMMANDS.md  LICENSE  main.ipynb  prompts.txt  pyproject.toml
artflow/: pyproject.toml
artflow/src/artflow/: __init__.py  __main__.py  args.py  bucket.py  dataset.py  model.py  training.py  utils.py
