[project]
name = "artflow"
version = "0.1.0"
description = "Diffusion training from scratch"
readme = "README.md"
authors = [{ name = "nostornum", email = "nostornum@gmail.com" }]
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.12.0",
    "diffusers>=0.36.0",
    "einops>=0.8.1",
    "einx[torch]>=0.3.0",
    "matplotlib>=3.10.8",
    "msgspec>=0.20.0",
    "polars[gpu]>=1.32.3",
    "python-dotenv>=1.2.1",
    "pyyaml>=6.0.3",
    "safetensors>=0.7.0",
    "sentencepiece>=0.2.1",
    "tensorboard>=2.20.0",
    "timm>=1.0.22",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
    "tqdm>=4.67.1",
    "transformers>=4.57.3",
    "tyro>=1.0.1",
    "wandb[media]>=0.23.1",
]

[build-system]
requires = ["uv_build>=0.9.17,<0.10.0"]
build-backend = "uv_build"
